--- a/2-investigating-netflix-movies/Investigating_Netflix_Movies.ipynb
+++ b/2-investigating-netflix-movies/Investigating_Netflix_Movies.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1k3TZW_DW5Yu5-rJrN16Jre96vC_pt38n",
-      "authorship_tag": "ABX9TyONS1Gt1F70rDNtscpHlD9d",
+      "authorship_tag": "ABX9TyNvqWiW5fPyz1qu0uihSj3Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rafinika/ds-phyton-fundamental/blob/main/2-investigating-netflix-movies/Investigating_Netflix_Movies.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rafinika/ds-python-fundamental/blob/main/2-investigating-netflix-movies/Investigating_Netflix_Movies.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -75,7 +75,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Read netflix_data.csv\n",
-        "file_path = '/content/drive/MyDrive/colab_notebooks/investigating_netflix_movies/netflix_data.csv'\n",
+        "file_path = 'https://raw.githubusercontent.com/rafinika/ds-python-fundamental/refs/heads/main/2-investigating-netflix-movies/netflix_data.csv'\n",
         "netflix_df = pd.read_csv(file_path)\n",
         "print(netflix_df.head())"
       ],
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OfsJhU8SmHsL",
-        "outputId": "5052d079-ffc3-401b-8ad5-3f8ff02fdca5"
+        "outputId": "9e341e20-26b6-44fc-9d0f-c216c177772f"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "07flEgDao0-s"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -152,9 +152,9 @@
           "height": 472
         },
         "id": "w6_cFcelpKNW",
-        "outputId": "0144df95-a22e-41a9-c586-62252e979785"
+        "outputId": "c7843054-0b77-4091-e905-64a821f51344"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -182,9 +182,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KzdAG9OwpTeL",
-        "outputId": "d51a2534-375a-410b-c60f-17b39447e762"
+        "outputId": "ebee9547-1715-4e5b-ac8d-238b6f2573fb"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
