--- a/3-exploring-NYC-school-test-scores/exploring_NYC_public_schools_SAT_scores.ipynb
+++ b/3-exploring-NYC-school-test-scores/exploring_NYC_public_schools_SAT_scores.ipynb
@@ -54,9 +54,7 @@
         "import pandas as pd\n",
         "\n",
         "# Read in the data\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "schools = pd.read_csv(\"/content/drive/MyDrive/colab_notebooks/exploring_NYC_public_schools_SAT_scores/schools.csv\")\n",
+        "schools = pd.read_csv(\"https://raw.githubusercontent.com/rafinika/ds-python-fundamental/refs/heads/main/3-exploring-NYC-school-test-scores/schools.csv\")\n",
         "\n",
         "# Preview the data\n",
         "schools.head()"
@@ -80,21 +78,14 @@
         "lastExecutedByKernel": "8c217f37-eed3-4433-a976-a37031c73a1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 206
         },
-        "outputId": "96e18a4d-e8ee-4fe5-8b53-692508ce37da"
+        "outputId": "6c965d71-89b8-4fb6-b28c-f9e635559e4c"
       },
       "id": "d0eb4f16-5a99-460d-a5ba-706b7ef0bbe7",
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -115,7 +106,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1de2027f-b337-4b99-9e42-0e39a963628a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e46c6f4b-e321-467d-83d1-5b23133df022\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -200,7 +191,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1de2027f-b337-4b99-9e42-0e39a963628a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e46c6f4b-e321-467d-83d1-5b23133df022')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -252,12 +243,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1de2027f-b337-4b99-9e42-0e39a963628a button.colab-df-convert');\n",
+              "        document.querySelector('#df-e46c6f4b-e321-467d-83d1-5b23133df022 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1de2027f-b337-4b99-9e42-0e39a963628a');\n",
+              "        const element = document.querySelector('#df-e46c6f4b-e321-467d-83d1-5b23133df022');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -277,10 +268,10 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4751ed3d-5559-448b-b417-4b7554cc1a83\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4751ed3d-5559-448b-b417-4b7554cc1a83')\"\n",
-              "            title=\"Suggest charts\"\n",
-              "            style=\"display:none;\">\n",
+              "    <div id=\"df-d67a0def-6963-4da0-9500-a4422d6897ba\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d67a0def-6963-4da0-9500-a4422d6897ba')\"\n",
+              "                title=\"Suggest charts\"\n",
+              "                style=\"display:none;\">\n",
               "\n",
               "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
               "     width=\"24px\">\n",
@@ -288,7 +279,7 @@
               "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
               "    </g>\n",
               "</svg>\n",
-              "  </button>\n",
+              "      </button>\n",
               "\n",
               "<style>\n",
               "  .colab-df-quickchart {\n",
@@ -380,29 +371,29 @@
               "  }\n",
               "</style>\n",
               "\n",
-              "  <script>\n",
-              "    async function quickchart(key) {\n",
-              "      const quickchartButtonEl =\n",
-              "        document.querySelector('#' + key + ' button');\n",
-              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
-              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
-              "      try {\n",
-              "        const charts = await google.colab.kernel.invokeFunction(\n",
-              "            'suggestCharts', [key], {});\n",
-              "      } catch (error) {\n",
-              "        console.error('Error during call to suggestCharts:', error);\n",
-              "      }\n",
-              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
-              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
-              "    }\n",
-              "    (() => {\n",
-              "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4751ed3d-5559-448b-b417-4b7554cc1a83 button');\n",
-              "      quickchartButtonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "    })();\n",
-              "  </script>\n",
-              "</div>\n",
+              "      <script>\n",
+              "        async function quickchart(key) {\n",
+              "          const quickchartButtonEl =\n",
+              "            document.querySelector('#' + key + ' button');\n",
+              "          quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "          quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "          try {\n",
+              "            const charts = await google.colab.kernel.invokeFunction(\n",
+              "                'suggestCharts', [key], {});\n",
+              "          } catch (error) {\n",
+              "            console.error('Error during call to suggestCharts:', error);\n",
+              "          }\n",
+              "          quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "          quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "        }\n",
+              "        (() => {\n",
+              "          let quickchartButtonEl =\n",
+              "            document.querySelector('#df-d67a0def-6963-4da0-9500-a4422d6897ba button');\n",
+              "          quickchartButtonEl.style.display =\n",
+              "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "        })();\n",
+              "      </script>\n",
+              "    </div>\n",
               "\n",
               "    </div>\n",
               "  </div>\n"
@@ -414,7 +405,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 1
         }
       ]
     },
@@ -438,7 +429,10 @@
           }
         },
         "id": "8431732e-1d66-441c-b950-478ea84202b3",
-        "outputId": "21171ba7-6e0b-4ad6-a307-d2b3a2db209e"
+        "outputId": "da252713-6e3a-4c4c-f855-fdcfeefb748e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "id": "8431732e-1d66-441c-b950-478ea84202b3",
@@ -446,10 +440,17 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "                                           school_name  average_math\n88                              Stuyvesant High School           754\n170                       Bronx High School of Science           714\n93                 Staten Island Technical High School           711\n365  Queens High School for the Sciences at York Co...           701\n68   High School for Mathematics, Science, and Engi...           683\n"
+          "text": [
+            "                                           school_name  average_math\n",
+            "88                              Stuyvesant High School           754\n",
+            "170                       Bronx High School of Science           714\n",
+            "93                 Staten Island Technical High School           711\n",
+            "365  Queens High School for the Sciences at York Co...           701\n",
+            "68   High School for Mathematics, Science, and Engi...           683\n"
+          ]
         }
       ],
-      "execution_count": null
+      "execution_count": 2
     },
     {
       "source": [
@@ -474,7 +475,10 @@
           }
         },
         "id": "678a9f2a-a7b5-4902-8f0a-d6f9126d4d7b",
-        "outputId": "d0e79493-a5e5-42dd-e4d5-417011cf773c"
+        "outputId": "00f0b4a4-3179-480f-d5a9-e545e1a307e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "id": "678a9f2a-a7b5-4902-8f0a-d6f9126d4d7b",
@@ -482,10 +486,22 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "                                           school_name  total_SAT\n88                              Stuyvesant High School       2144\n170                       Bronx High School of Science       2041\n93                 Staten Island Technical High School       2041\n174  High School of American Studies at Lehman College       2013\n333                        Townsend Harris High School       1981\n365  Queens High School for the Sciences at York Co...       1947\n5                       Bard High School Early College       1914\n280                     Brooklyn Technical High School       1896\n45                       Eleanor Roosevelt High School       1889\n68   High School for Mathematics, Science, and Engi...       1889\n"
+          "text": [
+            "                                           school_name  total_SAT\n",
+            "88                              Stuyvesant High School       2144\n",
+            "170                       Bronx High School of Science       2041\n",
+            "93                 Staten Island Technical High School       2041\n",
+            "174  High School of American Studies at Lehman College       2013\n",
+            "333                        Townsend Harris High School       1981\n",
+            "365  Queens High School for the Sciences at York Co...       1947\n",
+            "5                       Bard High School Early College       1914\n",
+            "280                     Brooklyn Technical High School       1896\n",
+            "45                       Eleanor Roosevelt High School       1889\n",
+            "68   High School for Mathematics, Science, and Engi...       1889\n"
+          ]
         }
       ],
-      "execution_count": null
+      "execution_count": 3
     },
     {
       "source": [
@@ -511,7 +527,10 @@
           }
         },
         "id": "2eb2c408-2557-451b-bfa3-7b217386617d",
-        "outputId": "14a1fb5d-26fa-4475-f668-e7d729d256ec"
+        "outputId": "d6cfbfba-8245-4dfe-b2fd-c5e9417ddde4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "id": "2eb2c408-2557-451b-bfa3-7b217386617d",
@@ -519,10 +538,14 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "           num_schools  average_SAT  std_SAT\nborough                                     \nManhattan           89      1340.13   230.29\n"
+          "text": [
+            "           num_schools  average_SAT  std_SAT\n",
+            "borough                                     \n",
+            "Manhattan           89      1340.13   230.29\n"
+          ]
         }
       ],
-      "execution_count": null
+      "execution_count": 4
     }
   ],
   "metadata": {
