--- a/4-Visualizing-the-History-of-Nobel-Prize-Winners/Visualizing_the_History_of_Nobel_Prize_Winners.ipynb
+++ b/4-Visualizing-the-History-of-Nobel-Prize-Winners/Visualizing_the_History_of_Nobel_Prize_Winners.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "19UJi5U8q_avOtMsP5f_sdecEPQpkMOe9",
-      "authorship_tag": "ABX9TyNB9E7/o1wc03FecpSkifjk",
+      "authorship_tag": "ABX9TyN2Lz+FtKUL0RM5NpzsasfN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,14 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "XUJjDrkq-URj",
-        "outputId": "77c22439-829a-4f0e-b9b0-8a75b7a629dd"
+        "outputId": "ab15e776-2bd0-47f3-d817-8cf2ba9bca57"
       },
       "outputs": [
         {
@@ -126,7 +126,7 @@
         "import numpy as np\n",
         "\n",
         "# Read csv\n",
-        "df = pd.read_csv('/content/drive/MyDrive/colab_notebooks/Visualizing_the_History_of_Nobel_Prize_Winners/nobel.csv')\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/rafinika/ds-python-fundamental/refs/heads/main/4-Visualizing-the-History-of-Nobel-Prize-Winners/nobel.csv')\n",
         "\n",
         "# Most commonly awarded gender and birth country\n",
         "top_gender = df['sex'].value_counts().idxmax()\n",
